add info + refactor